force-app/main/default/objects/Portal_User__c/fields/Is_First_Login__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Login__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is First Login</label>
    <type>Checkbox</type>
</CustomField>