force-app/main/default/objects/Portal_User__c/fields/Is_MFA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_MFA_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MFA Enabled?</label>
    <type>Checkbox</type>
</CustomField>