force-app/main/default/objects/Portal_User__c/fields/MFA_Secret__c.field-meta.xml
<CustomField>
    <fullName>MFA_Secret__c</fullName>
    <label>MFA Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>