force-app/main/default/objects/Portal_User__c/fields/Temporary_Password__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Password__c</fullName>
    <label>Temporary Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>