force-app/main/default/objects/Portal_User__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <externalId>true</externalId>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>